# ngs-traceview

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/ngs_traceview/: __init__.py  __main__.py  app.py  appconfig.py  notebook.py  paje.py  stats.py  style.py  timeline.py
src/ngs_traceview/shaders/: timeline.wgsl
